# caroline

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  NOTICE  README.md  docker-compose.yml  pyproject.toml  setup.py  spider-install.sh  ssh_client.py
.github/workflows/: ruff.yml
airflow/: download_operator.py  scratch.py  slurm_operator.py  spider_operator.py
airflow/dags/: benelux.py  dag-amsterdam.py  dag-interferogram.py  dowload_radar.py  download_orbits.py  interferogram.py  processing_interferogram.py  test-ssh.py
airflow/examples/: dowload_operator_ex.py  email_operator_ex copy.py  email_operator_ex.py  remote_file_transfer_ex.py  sbash_operator_ex.py  sbatch_operator_ex.py  slurm_operator_ex.py
airflow/operators/: download_operator.py  sbatch_operator.py  sbatch_template.py  slurm_operator.py
airflow/tests/: test-ssh-connection.py
caroline/: caroline  config.py  contextual_data.py  db.py  io.py  kml.py  parameter_file.py  preparation.py  prepare.py  scheduler.py  spider_install.py  utils.py
config/: contextual-data-definitions.yaml  job-definitions.yaml  plugin-definitions.yaml  spider-config.yaml  spider-test-config.yaml
config/parameter-files/: default-general-param-file.yaml  default-job-param-file-crop_to_raw.yaml  default-job-param-file-crop_to_zarr.yaml  default-job-param-file-deinsar.yaml  default-job-param-file-depsi.yaml  default-job-param-file-depsi_post.yaml  default-job-param-file-doris.yaml  default-job-param-file-stm_generation.yaml  default-machine-fields-param-file.yaml  example-user-param-file-nl_amsterdam.yaml  (+34 more)
dags/: caroline_ex1.py  caroline_ex2.py  caroline_ex3.py  caroline_v1.py  caroline_v2.py  download_dag.py  interferogram.py  slurm_example.py  spider_example.py  test-hpc-connection.py
docs/: 0-index.md  abbreviations.md  airflow.md  architecture.md  connections.md  custom-operators.md  dags.md  deployment.md  dev.md  development.md  download-engine.md  glossary.md  index.md  intro.md  management.md  overview.md  parameter-file.md  processing-engine.md
download/: config.json  example-asf.py  example-scihub.py  example.py  main.py  requirements.txt  sentinel_download.py  setup.py
examples/: dag.py  example-asf.py  example-scihub.py
processing/: requirements.txt  setup.py  test.py
prototype/: caroline-admin-spider.crontab  install.sh
scripts/: create-overview-kml.py  create-overview-kml.sh  create_mrm_ras_header.sh  email-log.sh  find-new-insar-files.sh  manage-contextual-data.sh  manage-portal-upload.sh  manage-s1-download.sh  run-caroline.sh  start_job.sh  summarize-running-jobs.sh  upload-result-csv-to-skygeo.sh
(+305 files in other folders)
