[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Caroline"
version = "3.0.10"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow",
    "fiona",
    "geopandas",
    "matplotlib",
    "psycopg2-binary",
    "sarxarray",
    "caroline-download@git+https://github.com/TUDelftGeodesy/caroline-download.git@v0.2.0rc2"
]
description = "End-to-end processing of Interferometric Synthetic Aperture Radar (InSAR) data"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Simon van Diepen", email = "s.a.n.vandiepen@tudelft.nl"},
]
keywords = ["radar", "sar", "insar", "earth observation", "distributed computing"]
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pycodestyle",
    "pre-commit",
    "ruff",
    "graphviz",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
]
plugins = [
    "scipy", # necessary for Doris v5
    "gdal==3.4.1", # necessary for Doris v5, version 3.4.1 since that reflects the status of libgdal on Spider
    "dask_jobqueue", # necessary for crop_to_zarr
    "ruptures",  # necessary for stm_generation
]

[tool.setuptools]
packages = ["caroline"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report term"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["caroline"]

[tool.ruff]
lint.select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "B",  # flake8-bugbear
  "D",  # pydocstyle
  "I",  # isort
  "N",  # PEP8-naming
  "UP",  # pyupgrade (upgrade syntax to current syntax)
  "PLE",  # Pylint error https://github.com/charliermarsh/ruff#error-ple
]
lint.ignore = [
"D100", "D101", "D104", "D105", "D106", "D107", "D203", "D213", "D413",
"N802", "N803", "N806", "N816" # Allow capital letters in variables
] # docstring style

line-length = 120
include = ["caroline/**", "scripts/**"]
exclude = ["*.m", "*.txt", "*.sh"]
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
